Fix sign up link spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -145,6 +145,8 @@ body {
   color: white;
 }
 
+
+
 .maxwidth {
   width: 100%;
 }
@@ -368,6 +370,10 @@ border-top-right-radius: 3px;
 .search-result-item {
   margin: 5px;
   padding: 5px;
+}
+
+.sign-up-link {
+  margin-left: 10px;
 }
 
 .spacer {
